content/static: fix various issues with homepage
+ Add blank alt text to decorative images (including the main image)
+ Preserve the main image ratio when sizing using CSS
+ Reduce the intrinsic size of the main image since we were displaying
  a much smaller version on the page
+ Adjust CSS for smaller viewports. Specifically, reduce top margins
  at smaller viewports
+ Update CSS to be mobile by default, with media queries covering
  wider viewports (to be in line with the other CSS across the site)
+ Update the background color of one of the footers to ensure we have
  satisfactory contrast ratio as reported by Lighthouse
+ Use smart quotes around sample searches
+ Transform the label text for example searches using CSS instead
  of directly typing in all caps

Updates golang/go#40504

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/248185
Run-TryBot: Andrew Bonventre <andybons@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/content/static/css/homepage.css
+++ b/content/static/css/homepage.css
@@ -7,14 +7,22 @@
 .Homepage {
   display: flex;
   flex-direction: column;
-  margin: 2rem auto;
+  margin: 0 auto;
   max-width: 38rem;
 }
 .Homepage-logo {
   display: block;
-  height: 15.25rem;
-  margin: 3.125rem auto;
+  height: 14.6rem;
+  margin: 0 auto 3.125rem;
   width: 22.8125rem;
+}
+@media only screen and (min-width: 52rem) {
+  .Homepage {
+    margin: 2rem auto;
+  }
+  .Homepage-logo {
+    margin: 3.125rem auto;
+  }
 }
 .Homepage-searchForm input {
   background: url('/static/img/icon-search.svg') right no-repeat;
@@ -73,19 +81,23 @@ a.Homepage-helpButton {
   margin: 1.5rem auto;
   text-align: center;
 }
-.Homepage-exampleSearches a {
+.Homepage-exampleSearchesLabel {
+  display: block;
+  text-transform: uppercase;
+}
+.Homepage-exampleSearch {
   color: var(--turq-dark);
   font-size: 1rem;
   font-weight: initial;
   padding: 0 0.625rem;
 }
-@media only screen and (max-width: 30rem) {
-  .Homepage-exampleSearches > span {
-    display: block;
+@media only screen and (min-width: 30rem) {
+  .Homepage-exampleSearchesLabel {
+    display: inline;
   }
 }
 .Questions {
-  background: var(--gray-9);
+  background: var(--gray-10);
   color: var(--gray-2);
   display: flex;
   padding: 0.5rem 0;
